--- a/nodejs-assets/nodejs-project/package.json
+++ b/nodejs-assets/nodejs-project/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@adyen/api-library": "^12.1.0",
     "axios": "^1.2.1",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "uuidv4": "^6.2.13"
   }
 }
