--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-device-info": "^10.3.0",
     "react-native-fs": "^2.20.0",
     "react-native-randombytes": "^3.6.1",
-    "react-native-url-polyfill": "^1.3.0"
+    "react-native-url-polyfill": "^1.3.0",
+    "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
